fix: evolution chain z-index

--- a/src/components/molecules/EvolutionChain/styles.module.scss
+++ b/src/components/molecules/EvolutionChain/styles.module.scss
@@ -31,7 +31,7 @@
   text-align: center;
   text-decoration: none;
   width: 100%;
-  z-index: get-index-level(lvl3);
+  z-index: get-index-level(lvl2);
 }
 
 .evolutionContainer:not(:last-child) {
